--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,13 +20,16 @@
         android:theme="@style/Theme.Bill_Genrating_App"
         tools:targetApi="31">
         <activity
-            android:name=".ViewItemActivity"
+            android:name=".Activities.OrderActivity"
             android:exported="false" />
         <activity
-            android:name=".AddItem"
+            android:name=".Activities.ViewItemActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".Activities.AddItem"
+            android:exported="false" />
+        <activity
+            android:name=".Activities.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
