orders working properly and add some animation like zoom in and zoom out

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,8 +5,8 @@
     <uses-feature
         android:name="android.hardware.camera"
         android:required="false" />
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_CAMERA" />
 
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_CAMERA" />
     <uses-permission android:name="android.permission.CAMERA" />
 
     <application
@@ -20,6 +20,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Bill_Genrating_App"
         tools:targetApi="31">
+        <activity
+            android:name=".Activities.AllOrdersActiity"
+            android:exported="false" />
         <activity
             android:name=".Activities.LoginActivity"
             android:exported="true">
@@ -40,9 +43,7 @@
             android:exported="false" />
         <activity
             android:name=".Activities.MainActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name="com.journeyapps.barcodescanner.CaptureActivity"
             android:screenOrientation="fullSensor"
