--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:theme="@style/Theme.Bill_Genrating_App"
         tools:targetApi="31">
         <activity
-            android:name=".Activities.AllOrdersActiity"
+            android:name=".Activities.ViewOrdersActivity"
             android:exported="false" />
         <activity
             android:name=".Activities.LoginActivity"
